fixed the makefile, separated download, load and merge files

--- a/src/data-preparation/makefile
+++ b/src/data-preparation/makefile
@@ -1,14 +1,22 @@
-first: mergedata
+# Makefile
+all: merge
 
-downloaddata: download.R
-	Rscript download.R
-	
-sortdata: downloaddata
-	Rscript sort_data.R
-	
-mergedata: sortdata
+# Define targets and dependencies
+download: download_data.R
+	Rscript download_data.R
+
+load: load_data.R download
+	Rscript load_data.R
+
+merge: merge_data.R load
 	Rscript merge_data.R
 
+
+# Clean up intermediate files
 clean:
-	R -e "unlink('*.csv')"
-	R -e "unlink('*.tsv')"
+	rm -f *.tsv
+	rm -f *.csv
+	rm -f *.gz
+
+# Specify phony targets
+.PHONY: download load filter clean
