Added some variable info to the README and changed the makefiles so they did not have circular dependencies

--- a/src/analysis/makefile
+++ b/src/analysis/makefile
@@ -1,9 +1,11 @@
 OUTPUT = ../../gen/output
 TEMP = ../../gen/temp
 
-all: $(OUTPUT)/plot.pdf 
+all: plot.pdf
 
-$(OUTPUT)/plot.pdf: $(TEMP)/merged_episodes.csv $(TEMP)/merged_short_series.csv $(TEMP)/merged_long_series.csv
+Dir_create:
 	R -e "dir.create('../../gen/output', recursive = TRUE)"
+
+plot.pdf: Dir_create
 	Rscript Plot.R
 
