Makefile now loads in Rmd. Changed boxplot explanation a bit

--- a/src/data-preparation/makefile
+++ b/src/data-preparation/makefile
@@ -1,7 +1,8 @@
 DATA = ../../IMDb-Datasets
-TEMP = ../../gen/temp 
+TEMP = ../../gen/temp
+OUTPUT = ../../gen/output
 
-all: $(TEMP)/merged_long_series.csv $(TEMP)/merged_short_series.csv $(TEMP)/merged_episodes.csv 
+all: $(OUTPUT)/Exploration.html
 
 $(DATA)/title.basics.tsv.gz $(DATA)/title.episode.tsv.gz $(DATA)/title.ratings.tsv.gz: Download.R
 	R -e "dir.create('../../IMDb-Datasets', recursive = TRUE)"
@@ -13,4 +14,7 @@ $(TEMP)/long_series.csv $(TEMP)/short_series.csv $(TEMP)/names_series.csv $(TEMP
 	
 $(TEMP)/merged_episodes.csv $(TEMP)/merged_short_series.csv $(TEMP)/merged_long_series.csv: $(TEMP)/long_series.csv $(TEMP)/short_series.csv $(TEMP)/names_series.csv $(TEMP)/episodes.csv
 	Rscript Merging.R
-	
+
+$(OUTPUT)/Exploration.html: Exploration.Rmd $(TEMP)/merged_episodes.csv $(TEMP)/merged_short_series.csv $(TEMP)/merged_long_series.csv
+	R -e "dir.create('../../gen/output', recursive = TRUE)"
+	Rscript -e 'rmarkdown::render("Exploration.Rmd")'
